fixed broken navbar on small screens by displaying as block

--- a/style/style.css
+++ b/style/style.css
@@ -36,6 +36,7 @@ main{
         width: 100%;
     }
     main{
+        display: block;
         justify-content: left;
     }
 }
